# ai-agent-inspector

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: publish.yml  release-please.yml
agent_inspector/: __init__.py  cli.py
agent_inspector/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py
agent_inspector/api/: __init__.py  main.py
agent_inspector/core/: __init__.py  config.py  events.py  exporters.py  interfaces.py  queue.py  trace.py
agent_inspector/exporters/: __init__.py  otel.py
agent_inspector/processing/: __init__.py  pipeline.py
agent_inspector/storage/: __init__.py  database.py  exporter.py
agent_inspector/ui/: __init__.py  app.py
agent_inspector/ui/static/: app.css  app.js
agent_inspector/ui/templates/: index.html
examples/: .env.example  basic_tracing.py  multi_agent.py  real_agent.py
openspec/: README.md  STRUCTURE.md
openspec/changes/example-add-streaming-support/: README.md  design.md  proposal.md  tasks.md
openspec/changes/example-add-streaming-support/specs/core-tracing/: spec.md
openspec/principles/: README.md  core.md
openspec/specs/: README.md
openspec/specs/adapters/: spec.md
openspec/specs/api/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/core-tracing/: spec.md
openspec/specs/data-processing/: spec.md
openspec/specs/storage/: spec.md
openspec/specs/ui/: spec.md
tests/: __init__.py  test_api.py  test_api_auth.py  test_api_error_paths.py  test_autogen_adapter.py  test_cli.py  test_config.py  test_crewai_adapter.py  test_exporter.py  test_exporters.py  test_init_imports.py  test_interfaces.py  test_langchain_adapter.py  test_multi_agent.py  test_processing.py  test_queue.py  test_storage.py  test_trace.py  test_ui_setup.py
